# script-parallel-exec

./: .gitignore  CMakeLists.txt  demo_script.hpp  script.hpp
no-templates/: main_doubles.cpp  main_ints.cpp
templated-script/: demo_script.hpp  script.hpp
windows-affinity/: do_work.hpp  main_doubles.cpp  main_ints.cpp  run_params.cpp  run_params.hpp
windows-group-affinity/: do_work.hpp  main_doubles.cpp  main_ints.cpp  run_params.cpp
windows-proc-groups/: do_work.hpp  main_doubles.cpp  main_ints.cpp  run_params.cpp  run_params.hpp
with-templates/: do_work.hpp  main_doubles.cpp  main_ints.cpp  raise_thread_priority.hpp
